--- a/index.html
+++ b/index.html
@@ -9,18 +9,19 @@
 
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/boilerplate.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/bootstrap-theme.css">
     <link rel="stylesheet" href="css/compiled.css">
     <script src="js/vendor/modernizr-2.8.0.js"></script>
 </head>
 <body>
 
-    <p>HTML5 Boilerplate.</p>
 
 
     <script src="js/vendor/jquery-1.11.1.js"></script>
     <script src="js/plugins.js"></script>
+    <script src="js/vendor/bootstrap.js"></script>
     <script src="js/main.js"></script>
     <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
-
 </body>
 </html>
