initial menu and content

--- a/index.html
+++ b/index.html
@@ -1,25 +1,176 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html class="no-js" lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title></title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<title></title>
+	<meta name="description" content="">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/boilerplate.css">
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/bootstrap-theme.css">
-    <link rel="stylesheet" href="css/compiled.css">
-    <script src="js/vendor/modernizr-2.8.0.js"></script>
+	<!-- <link rel="stylesheet" href="css/normalize.css"> -->
+	<link rel="stylesheet" href="css/boilerplate.css">
+	<link rel="stylesheet" href="css/bootstrap.css">
+	<!-- <link rel="stylesheet" href="css/bootstrap-theme.css"> -->
+	<link rel="stylesheet" href="css/compiled.css">
+
+	<!-- <script src="js/vendor/modernizr-2.8.0.js"></script> -->
+
 </head>
 <body>
+<div class="container">
+<div class="row">
+  <div class="col-md-3">
+
+    <ul>
+	     <li><a href="#classrooms">Classrooms</a>
+	    		<ul>
+	    			<li><a href="#avcontrols">AV controls</a></li>
+	    			<li><a href="#macmini">Built-in computer</a></li>
+	    			<li><a href="#classroom_laptop">Connecting a Laptop</a></li>
+	    			<li><a href="#dvdplayer">DVD Player</a></li>
+	    			<li><a href="#overhead">Overhead Projector</a></li>
+    		</ul>
+	    	</li>
+	    	<li>	<a href="#group_study_rooms">Group Study Rooms</a>
+	    		<ul>
+	    			<li><a href="#bloomberg">Bloomberg computers</a></li>
+	    			<li><a href="#gsr_laptop">Connecting a Laptop</a></li>
+	    		</ul>
+	    	</li>
+	    	<li><a href="#">Printing</a>
+	    		<ul>
+	    			<li><a href="#">Copy Room Printer</a></li>
+	    			<li><a href="#">Pharos Printer</a></li>
+	    			<li><a href="#">Kiosk Computers</a></li>
+	    		</ul>
+	    	</li>
+	    	<li><a href="#">Faculty Hotel Offices</a></li>
+	    	<li><a href="#">Lecture Capture</a></li>
+	    	<li><a href="#">Network</a></li>
+	    	<li><a href="#">Phones</a></li>
+    </ul>
+  </div> <!-- col-md-3 -->
 
 
+
+  <div class="col-md-9">
+
+    <div id="classrooms">
+    		<h3>Classrooms</h3>
+    			<h4 id="avcontrols">AV Controls</h4>
+    			<p>The AV System is controlled by a wall mounted touchscreen.
+    			   In rooms 527 and 529 the screen is located next to the door.
+    			   In rooms 451, 452 and 453 it is located on the wall next to
+    			   the whiteboard</p>
+    			<h4 id="classroom_laptop">Using a laptop with the classroom projector</h4>
+    			<p>The classroom Lecterns have cables to connect a laptop using either
+    				VGA or HDMI ports to the projector.  Note that mac laptops do not have VGA or HDMI
+    				ports and will need an adapter to connect to the projector.
+    				<ul>
+    				<li>Turn the AV system on and press the icon for Laptop VGA or
+    			    Laptop HDMI for the connection you will be using.</li>
+    			    <li>Connect either the VGA or HDMI cable from the lectern to
+    			    	the laptop.  If you are using an adapter connect the cable to
+    			    	the adapter first and then connect it to the laptop</li>
+    				<li>If you are using the VGA connection and will need audio connect
+    			    the audio plug from the lectern cable into the headphone jack on the
+    			    laptop.</li>
+    			    <li>If the laptop does not automatically display through the
+    			    	projector you will need to configure it to use an external display</li>
+    			    <li><b>Internt Access - </b> You can either use USFWireless or there
+    			    	is a network cable in the lectern that can connect to the laptop.</li>
+    			    </ul>
+    			</p>
+    			<h4 id="macmini">Classroom built in computer</h4>
+    			<p>
+    				The lectern in each classroom has a built in monitor and keyboard that
+    				connect to a mac mini computer that has both
+    				Mac and Windows 7 operating systems on it. To user the computer
+    				turn the AV system on and press the icon
+    				labeled <b>Mac Mini</b>.
+    				<ul>
+    				<li>To access the monitor and keyboard lift up the
+    				lectern cover and fold it back.  Pull the top of the monitor screen up
+    				to tilt it so you can see it.  The keyboard and trackpad are located in
+    				a drawer on the bottom of the lectern.</li>
+    				<li>The monitor has a green light
+    				on the bottom edge of it when it is turned on.  If the light is not on
+    				press the power button located on the bottom edge of the monitor.</li>
+    				<li>	If the screen is blank or has a 'no signal' message you will need to
+    				press the mac mini power button which is located in the AV rack. For fourth floor
+    				rooms the AV rack is located in a cabinet in the back of the room.  For 5th floor
+    				classrooms it is located in the cabinet underneath the chalkboard closest to the door
+    				The power button has a yellow label next to it</li>
+    				<li><b>Choosing mac or windows - </b> When the computer starts up it displays
+    			  a menu where you can choose to use either Mac or Windows.  If at anytime you need
+    			  to switch between Mac or Windows restart the computer to bring up this menu.</li>
+    			  <li><b>Connecting a USB device</b> There is a USB connection to the built in
+    			  	computer on the lectern to the right of the monitor.  If you need to connect more
+    			  	than one device there are two more USB connections in the AV rack</li>
+				  </ul>
+    			</p>
+
+			<h4 id="dvdplayer">Classroom DVD Player</h4>
+			<p>Each classroom had a DVD player in the AV rack.For fourth floor
+    		  rooms the AV rack is located in a cabinet in the back of the room.
+    			For 5th floor classrooms it is located in the cabinet underneath
+    			the chalkboard closest to the door.
+		    <ul>
+			  <li>Turn on the AV system and press the icon for DVD Player</li>
+			  <li>Go to the DVD plaer in the AV rack.</li>
+			  <li>If the power indicator light is orange press the DVD power button</li>
+			  <li>The button to load the DVD is XXXXXXXXXX</li>
+			  <li>The controls for the DVD player are located on the wall mounted
+			  AV control panel</li>
+			  </ul>
+			</p>
+
+			<h4 id="overhead">Overhead Projector</h4>
+			<p>There are 3 overhead projectors at the downtown campus.  Please
+				contact Kenji Okamoto or ITS in advance to request one for
+				a class.
+			</p>
+   </div> <!-- #classrooms -->
+
+    <div id="group_study_rooms">
+      <h3>Group Study Rooms</h3>
+
+   	  <h4 id="bloomberg">Bloomberg Computers</h4>
+   	  <p>Each group study room has a computer with Bloomberg software located
+   	    in the cabinet below the display.  To use the computer:
+   		  <ul>
+   		  <li>Turn the computer on if it is not already on</li>
+   		  <li>Check the power status light on the lower right corner of the display.  If it
+   		  is orange press the power button on the bottom of the display.</li>
+   		  <li>If the computer is not displaying on the display press the button on the
+   		  source button on the bottom of the display repeatedly until it switches to BNC</li>
+   		  </ul>
+   	  </p>
+
+      <h4 id="gsr_laptop">Connecting a laptop to the display</h4>
+      <p>Laptops can be connected to the groups study rooms displays using a VGA
+      	  connection. Mac laptops will need a VGA adapter.
+      	<ul>
+   		  <li>Check the power status light on the lower right corner of the display.  If it
+   		  is orange press the power button on the bottom of the display.</li>
+        <li>Press the source button on the bottom of the display repeatedly until
+        it switches to PC</li>
+        <li>Connect the VGA connection cable in the cetner table console to the laptop</li>
+    		<li>If the laptop does not automatically display through the
+    		projector you will need to configure it to use an external display</li>
+   		  </ul>
+   		</p>
+    </div> <!-- #group_study_rooms -->
+
+  </div> <!-- col-md-9 -->
+
+
+</div> <!-- row -->
+</div> <!-- container -->
 
     <script src="js/vendor/jquery-1.11.1.js"></script>
-    <script src="js/plugins.js"></script>
+    <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
+    <!-- <script src="js/plugins.js"></script> -->
     <script src="js/vendor/bootstrap.js"></script>
     <script src="js/main.js"></script>
     <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
