--- a/index.html
+++ b/index.html
@@ -46,10 +46,13 @@
 		    	<li><a href="#kiosk">Kiosk Computers</a></li>
 		    	<li><a href="#hotel_offices">Faculty Hotel Offices</a></li>
 		    	<li><a href="#lecture_capture">Lecture Capture</a></li>
-		    	<li><a href="#">Network</a></li>
-		    	<li><a href="#">Wireless</a></li>
-		    	<li><a href="#">Phones</a></li>
-		    	<li><a href="#">Fax</a></li>
+		    	<li><a href="#wireless">Wireless</a></li>
+		    	<li><a href="#phone">Phones</a></li>
+		    		<ul>
+		    			<li><a href="#conference_phone">Conference Phone</a></li>
+		    		</ul>
+		    	<li><a href="#fax">Fax</a></li>
+		    	<li><a href="#telepresence">Telepresence Room</a></li>
 	    </ul>
   </div> <!-- col-md-3 -->
 
@@ -75,10 +78,10 @@
     			   <ul>
     			   	<li>The 4 icons on the top row select which source the projector will show
     			   		<ul>
-    			   			<li>Laptop VGA - for for displaying a laptop connected with the VGA cable</li>
-    			   			<li>Laptop HDMI - for displaying a laptop connected with the HDMI cable</li>
-    			   			<li>Mac Mini - for displaying the lectern's built in computer</li>
-    			   			<li>DVD - for using the DVD player located in the AV rack</li>
+    			   			<li><b>Laptop VGA</b> - for for displaying a laptop connected with the VGA cable</li>
+    			   			<li><b>Laptop HDMI</b> - for displaying a laptop connected with the HDMI cable</li>
+    			   			<li><b>Mac Mini</b> - for displaying the lectern's built in computer</li>
+    			   			<li><b>DVD</b> - for using the DVD player located in the AV rack</li>
     			   		</ul>
     			   	<li>The <b>Off</b> and <b>On</b> buttons in the left column turn the projector on and off.
     			   		  Note that after turning the projector off it can take up to 5 minutes to turn it back on</li>
@@ -198,7 +201,7 @@
 	    			<p>The Ricoh machine in the fifth floor copy room is capable of color and
 	    				black and white printing &amp; copying, scanning and faxing.
 	    				To setup a computer to print to it follow these directions for
-	    				<a href="#">Windows</a> or <a href="#">Mac</a>.</p>
+	    				<a href="#">XXXXXXXX Windows</a> or <a href="#">XXXXXXXX Mac</a>.</p>
 				<h4 id="pharos">Pharos</h4>
 					<p>There are two Pharos printers available for staff and students.  One is on the fifth floor
 						 in the hallway outside the copy room. The other is on the fourth floor outside room 454.
@@ -209,7 +212,7 @@
 					<ul>
 						<li>When printing from a Windows computer use the printer called <b>USF Ricoh Secure Print</b>.
 							On a Mac it will be called <b>XXXXXXXX</b>.  If your computer does not have that printer
-						  listed you will need to install it </li>
+						  listed you will need to <a href="http://www.usfca.edu/purchasing/Pharos_Client_Software/">install it</a></li>
 					</ul>
     	</	div> <!-- #printing -->
 
@@ -218,7 +221,9 @@
 			<p>There are two Mac kiosk computers located on the fifth floor between the
 				elevators and the classrooms.  The power button and USB connections for
 				are located on the back side of the computer.  The kiosk computers can print
-				to the Pharos printers.</p>
+				to the Pharos printers. When printing from Microsoft Windows the print button on the
+				toolbar won't work with the Pharos printer.  You need to print from the
+				file menu.</p>
 		</div>
 
 		<div id="hotel_office">
@@ -239,8 +244,80 @@
 				request and received confirmation there is nothing further you need to do.  The system will automatically
 				turn on and off at your requested time.  After the recording completes it takes up to 2 days to process
 				and then a link to view it will be emailed to the requestor.</p>
+		</div> <!-- lecture_capture -->
 
-		</div> <!-- # -->
+		<div id="wireless">
+			<h3>Wireless</h3>
+			<p>USF Wireless at the downtown campus works the same as on the main campus</p>
+			<ul>
+				<li>To access wireless connect your device to the USFWireless network.
+					  Then go to any webpage that starts
+					  with <b>http://</b> and it will redirect you to a login page.</li>
+				<li>Faculty and staff can create temporary guest wireless accounts by
+					  going to <a href="http://netguests.usfca.edu">http://netguests.usfca.edu</a></li>
+				<li>To access a USF shared network folder or print to the copy room printer
+					  while on wireless you will need to use the
+					  <a href="http://www.usfca.edu/its/network/remote/">Cisco AnyConnect</a> VPN program.</li>
+			</ul>
+		</div> <!-- wireless -->
+
+		<div id="phone">
+			<h3>Phones</h3>
+			<p></p>
+			  <ul>
+			  	<li>Instructions for using the phone and voicemail in pdf form are
+			  		here XXXXXXXXXXXXXXXXXX</li>
+			  	<li>Voicemails from the downtown campus cannot be forwarded to main
+			  		campus extensions due to differing systems.</li>
+			  	<li>If you here a dialtone in the middle of dialing a number just ignore it
+			  		and keep dialing</li>
+			  		<li>To request international calling please contact the ITS Help Desk x6668</li>
+			  </ul>
+				<h4 id="conference_phone">Conference Phone</h4>
+					<p>A conference phone is kept at the main desk and can be setup in
+						 any of the rooms or offices at the downtown campus.</p>
+					<ul>
+						<li>The phone number for it is XXXXXXXXXXX</li>
+						<li>To reserve the phone please make a request with reception or the
+							  office manager</li>
+				    <li>For help setting up the phone and using it please check with ITS (Kenji)</li>
+				    <li>
+				    	    If you need to have multiple locations call in to the conference phone
+				    	    follow these steps.
+				    	    <ol>
+				    	    	<li>	Press the button under the box on the screen that says <b>more</b></li>
+				    	    	<li>Press the button under the box on the screen that says <b>MeetMe</b></li>
+				    	    	<li>Type in <b>8500</b></li>
+				    	    	<li>The phone display should indicate <b>To Conference (8500)</b></li>
+				    	    	<li>Have the remote parties call <b>415-422-8500</b> to be added to the conference</li>
+				    	    	<li>The phone will beep once when a remote party is connected and twice when they disconnect.</li>
+				    	    </ol>
+				    </li>
+					</ul>
+		</div> <!-- phone -->
+
+		<div id="fax">
+			<h3>Fax</h3>
+			<ul>
+				<li>The Ricoh machine in the copy room has faxing enabled with fax number
+					<b>415-422-XXXXXXX</b></li>
+				<li>To send a fax press the Fax button to the left of the display and
+					enter your copier access code</li>
+					<li>A fax machine for student use is located next to the 5th floor
+						Pharos printer in the hallway by the copy room.</li>
+			</ul>
+		</div> <!-- fax -->
+
+		<div id="telepresence">
+			<h3>Telepresence / Video Conferencing</h3>
+			<p>A Telepresence system is installed in room 504</p>
+			<ul>
+				<li>XXXXXXXXX</li>
+				<li></li>
+				<li></li>
+				<li></li>
+			</ul>
+		</div> <!-- telepresence -->
 
 		<div id="">
 			<h3></h3>
