--- a/tree.html
+++ b/tree.html
@@ -26,13 +26,12 @@
 
 
 
-    <script src="js/vendor/jquery-1.11.1.js"></script>
-    <!-- <script src="http://code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.js"></script> -->
-    <!-- <script src="js/plugins.js"></script> -->
-    <script src="js/vendor/bootstrap.js"></script>
-    <script src="js/main.js"></script>
-
-
-    <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
+  <script src="js/vendor/jquery-1.11.1.js"></script>
+  <!-- <script src="http://code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.js"></script> -->
+  <!-- <script src="js/plugins.js"></script> -->
+  <script src="js/vendor/bootstrap.js"></script>
+  <script src="src/script.js"></script>
+  <script src="src/tree.js"></script>
+  <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 </body>
 </html>
