--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 		    	<li><a href="#kiosk">Kiosk Computers</a></li>
 		    	<li><a href="#hotel_offices">Faculty Hotel Offices</a></li>
 		    	<li><a href="#lecture_capture">Lecture Capture</a></li>
+		    	<li><a href="#video_camera">Video Camera</a></li>
 		    	<li><a href="#wireless">Wireless</a></li>
 		    	<li><a href="#phone">Phones</a></li>
 		    		<ul>
@@ -103,19 +104,19 @@
     				VGA or HDMI ports to the projector.  Note that mac laptops do not have VGA or HDMI
     				ports and will need an adapter to connect to the projector.
     				<ul>
-    				<li>Turn the AV system on and press the icon on the touchscreen for Laptop VGA or
-    			    Laptop HDMI for the connection you will be using.</li>
+    				  <li>Turn the AV system on and press the icon on the touchscreen for Laptop VGA or
+    			      Laptop HDMI for the connection you will be using.</li>
     			    <li>Connect either the VGA or HDMI cable from the lectern to
-    			    	the laptop.  If you are using an adapter connect the cable to
-    			    	the adapter first and then connect it to the laptop</li>
-    				<li>If you are using the VGA connection and will need audio connect
-    			    the audio plug from the lectern cable into the headphone jack on the
-    			    laptop.</li>
+    			      	the laptop.  If you are using an adapter connect the cable to
+    			      	the adapter first and then connect it to the laptop</li>
+    				  <li>If you are using the VGA connection and will need audio connect
+    			      the audio plug from the lectern cable into the headphone jack on the
+    			      laptop.</li>
     			    <li>If the laptop does not automatically display through the
-    			    	projector you will need to configure it to use an external display</li>
+    			      	projector you will need to configure it to use an external display</li>
     			    <li><b>Internt Access - </b> You can either use USFWireless or there
-    			    	is a network cable in the lectern that can connect to the laptop.</li>
-    			    </ul>
+    			      	is a network cable in the lectern that can connect to the laptop.</li>
+    			  </ul>
     			</p>
     			<h4 id="macmini">Classroom built in computer</h4>
     			<p>
@@ -147,23 +148,23 @@
     			</p>
 
 			<h4 id="dvdplayer">Classroom DVD Player</h4>
-			<p>Each classroom had a DVD player in the AV rack.For fourth floor
+			<p>Each classroom had a DVD player in the AV rack. For fourth floor
     		  rooms the AV rack is located in a cabinet in the back of the room.
     			For 5th floor classrooms it is located in the cabinet underneath
     			the chalkboard closest to the door.
 		    <ul>
-			  <li>Turn on the AV system and press the icon for DVD Player</li>
-			  <li>Go to the DVD plaer in the AV rack.</li>
-			  <li>If the power indicator light is orange press the DVD power button</li>
-			  <li>The button to load the DVD is XXXXXXXXXX</li>
-			  <li>The controls for the DVD player are located on the wall mounted
-			  AV control panel</li>
+				  <li>Turn on the AV system and press the icon for DVD Player</li>
+				  <li>The DVD player is located in the top row of the AV rack</li>
+				  <li>If the power indicator light is orange press the <b>Standby/On</b> button</li>
+				  <li>The tray that holds the disc has a <b>DVD video</b> logo on it and opens by pressing the square button to the right of it.</li>
+				  <li>The controls for the DVD player are located on the wall mounted
+				      touchscreen control panel.</li>
 			  </ul>
 			</p>
 
 			<h4 id="overhead">Overhead Projector</h4>
 			<p>There are 3 overhead projectors at the downtown campus.  Please
-				contact Kenji Okamoto or ITS in advance to request one for
+				contact Kenji Okamoto x2559 in advance to request one for
 				a class.
 			</p>
    </div> <!-- #classrooms -->
@@ -202,9 +203,11 @@
     		<h3>Printing</h3>
     			<h4 id="copy_room_printer">Copy Room Ricoh Printer</h4>
 	    			<p>The Ricoh machine in the fifth floor copy room is capable of color and
-	    				black and white printing &amp; copying, scanning and faxing.
-	    				To setup a computer to print to it follow these directions for
-	    				<a href="#">XXXXXXXX Windows</a> or <a href="#">XXXXXXXX Mac</a>.</p>
+	    				 black and white printing &amp; copying, scanning and faxing.
+	    				 To setup a computer to print to it follow these directions for
+	    				 <a href="https://sites.google.com/a/usfca.edu/okamoto/pdf/Copy%20Room%20Printer%20Windows%207%20Setup.pdf">
+	    				 Windows</a> or <a href="https://sites.google.com/a/usfca.edu/okamoto/pdf/Copy%20Room%20Printer%20Mac%20Setup.pdf">
+	    				 Mac</a>.</p>
 				<h4 id="pharos">Pharos</h4>
 					<p>There are two Pharos printers available for staff and students.  One is on the fifth floor
 						 in the hallway outside the copy room. The other is on the fourth floor outside room 454.
@@ -214,7 +217,7 @@
 					</p>
 					<ul>
 						<li>When printing from a Windows computer use the printer called <b>USF Ricoh Secure Print</b>.
-							On a Mac it will be called <b>XXXXXXXX</b>.  If your computer does not have that printer
+							On a Mac it will be called <b>USFPharos Queue</b>.  If your computer does not have that printer
 						  listed you will need to <a href="http://www.usfca.edu/purchasing/Pharos_Client_Software/">install it</a></li>
 					</ul>
     	</	div> <!-- #printing -->
@@ -233,7 +236,7 @@
 			<h3>Faculty Hotel Offices</h3>
 			<p>The monitor, keyboard and mouse are connected to a switcher box that allows
 				them to be easily switched to connect to either the desktop computer or a laptop. <br>
-				Press the <b>XXXXXX</b> button on the switcher to toggle between the desktop and laptop
+				Press the <b>Select</b> button on the switcher to toggle between the desktop and laptop
 				connection.  To connect a laptop find the cable with the VGA and USB connector and connect
 				them both to the laptop.</p>
 		</div>
@@ -246,8 +249,45 @@
 				<a href="http://itsreservations.usfca.edu">http://itsreservations.usfca.edu</a>.  Once you have submitted a
 				request and received confirmation there is nothing further you need to do.  The system will automatically
 				turn on and off at your requested time.  After the recording completes it takes up to 2 days to process
-				and then a link to view it will be emailed to the requestor.</p>
+				and then a link to view it will be emailed to the requestor.  A valid USFConnect login is required to
+				view the videos.</p>
 		</div> <!-- lecture_capture -->
+
+		<div id="video_camera">
+			<h3>Video Camera</h3>
+			<p>A digital video camera and tripod are available for recording videos.
+				 Please request a reservation for it with the reception staff or office
+				 manager in advance.  After making a recording you can copy the videos
+				 from the camera to your computer and/or make a request with Kenji in ITS at
+				 x2559 to post them to a website</p>
+				 <b>&nbsp;&nbsp;&nbsp;&nbsp;To operate the camera:</b>
+				 <ul>
+				 	<li>Turn the camera by opening the viewfinder screen and pressing the power button on the side of the camera.</li>
+				 	<li><b>Recording - </b>Make sure lens cover is open.  If it is closed the open switch is on the side of the camera behind the lens.</li>
+				 	<li>A switch on the back of the camera changes between Record and Playback mode.  Set it to the record position.</li>
+				 	<li>Battery life is indicated by an icon on the viewfinder.  Use AC the adapter if the battery life is not adequate.</li>
+				 	<li>Check the record time (R) indicator on the screen.  If there is not enough time for your recording delete some files from the camera.</li>
+				 	<li>To start recording press the red button on the back of the camera.</li>
+				 	<li>You can confirm recording is in progress by checking the screen for the presence of a Red circle with a running timer next to it.</li>
+				 	<li>To stop recording press the record button again.</li>
+				 	<li><b>Playback - </b>Set the Record/Playback switch on the back of the camera to the Play position. Use the buttons to the left of the display screen to select and play a video</li>
+				</ul>
+				<b>&nbsp;&nbsp;&nbsp;&nbsp;Copying videos to a computer</b>
+				<ul>
+          <li>Use USB cable to connect camera to the computer and turn the camera on.</li>
+          <li>On the camera display press the enter button to select PC</li>
+          <li>The camera will show up as a USB drive on the computer</li>
+          <li>Video files will be in the PRIVATE &#8594; AVCHD &#8594; BDMV &#8594; STREAM folder.</li>
+				 </ul>
+				<b>&nbsp;&nbsp;&nbsp;&nbsp;Deleting files from the camera</b>
+				<ul>
+          <li>Set the Record/Playback switch on the back of the camera to the Play position.</li>
+          <li>Press the trash can button on the side of the camera.</li>
+          <li>You can delete all videos or use <b>Select</b> to select which videos to delete.</li>
+          <li>To select videos use the arrow and <b>Enter</b> buttons on the side of the display.</li>
+          <li>When the scenes to be deleted are selected press the trash can button.</li>
+				 </ul>
+		</div> <!-- video camera -->
 
 		<div id="wireless">
 			<h3>Wireless</h3>
@@ -268,8 +308,9 @@
 			<h3>Phones</h3>
 			<p></p>
 			  <ul>
-			  	<li>Instructions for using the phone and voicemail in pdf form are
-			  		here XXXXXXXXXXXXXXXXXX</li>
+			  	<li><a href="https://sites.google.com/a/usfca.edu/okamoto/pdf/Cisco%20Phone%20Instructions.pdf">
+			  		  Click Here</a> for a pdf file with instructions for phone and voicemail use.
+			  	</li>
 			  	<li>Voicemails from the downtown campus cannot be forwarded to main
 			  		campus extensions due to differing systems.</li>
 			  	<li>If you here a dialtone in the middle of dialing a number just ignore it
@@ -292,7 +333,7 @@
 				    	    	<li>Press the button under the box on the screen that says <b>MeetMe</b></li>
 				    	    	<li>Type in <b>8500</b></li>
 				    	    	<li>The phone display should indicate <b>To Conference (8500)</b></li>
-				    	    	<li>Have the remote parties call <b>415-422-8500</b> to be added to the conference</li>
+				    	    	<li>Have the remote parties call <b>422-8500</b> to be added to the conference</li>
 				    	    	<li>The phone will beep once when a remote party is connected and twice when they disconnect.</li>
 				    	    </ol>
 				    </li>
@@ -303,7 +344,7 @@
 			<h3>Fax</h3>
 			<ul>
 				<li>The Ricoh machine in the copy room has faxing enabled with fax number
-					<b>415-422-6315</b></li>
+					<b>422-6315</b></li>
 				<li>To send a fax press the Fax button to the left of the display and
 					enter your copier access code. When entering the fax number you
 					need to put 9 in front of it unless it is a USF extension.</li>
@@ -315,13 +356,16 @@
 		<div id="telepresence">
 			<h3>Telepresence / Video Conferencing</h3>
 			<p>A Telepresence system is installed in room 504 that can connect
-				to the room in Malloy Hall 405.</p>
-			<ul>
-				<li>XXXXXXXXX</li>
-				<li></li>
-				<li></li>
-				<li></li>
-			</ul>
+	  		  to the room in Malloy Hall 405. To make a call:
+				<ul>
+					<li>Press the touchpanel on the table to turn on the system</li>
+					<li>Press the <b>Contacts</b> button on the bottom row of the panel</li>
+					<li>Press <b>Favorites</b>, then <b>Malloy 405</b> then <b>Call</b></li>
+				</ul>
+				A laptop to can be connected to the telepresence system using the VGA
+				cable in the middle of the table. Press the <b>Presentation</b> button
+				on the control panel.  If done while in a video conference call it will
+				share the laptop screen with the remote parties.</p>
 		</div> <!-- telepresence -->
 
 		<div id="">
