update phone section structure

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 	<!-- <link rel="stylesheet" href="css/bootstrap-theme.css"> -->
 	<link rel="stylesheet" href="css/compiled.css">
   <!-- <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.min.css" /> -->
-
 	<!-- <script src="js/vendor/modernizr-2.8.0.js"></script> -->
 
 </head>
@@ -49,10 +48,12 @@
 		    	<li><a href="#lecture_capture">Lecture Capture</a></li>
 		    	<li><a href="#video_camera">Video Camera</a></li>
 		    	<li><a href="#wireless">Wireless</a></li>
-		    	<li><a href="#phone">Phones</a></li>
+		    	<li><a href="#phone">Phones</a>
 		    		<ul>
+		    			<li><a href="#office_phone">Office Phones</a></li>
 		    			<li><a href="#conference_phone">Conference Phone</a></li>
 		    		</ul>
+		    	</li>
 		    	<li><a href="#fax">Fax</a></li>
 		    	<li><a href="#telepresence">Telepresence Room</a></li>
 	    </ul>
@@ -306,17 +307,17 @@
 
 		<div id="phone">
 			<h3>Phones</h3>
-			<p></p>
-			  <ul>
-			  	<li><a href="https://sites.google.com/a/usfca.edu/okamoto/pdf/Cisco%20Phone%20Instructions.pdf">
-			  		  Click Here</a> for a pdf file with instructions for phone and voicemail use.
-			  	</li>
-			  	<li>Voicemails from the downtown campus cannot be forwarded to main
-			  		campus extensions due to differing systems.</li>
-			  	<li>If you here a dialtone in the middle of dialing a number just ignore it
-			  		and keep dialing</li>
-			  		<li>To request international calling please contact the ITS Help Desk x6668</li>
-			  </ul>
+			  <h4 id="office_phone">Office Phones</h4>
+				  <ul>
+					  	<li><a href="https://sites.google.com/a/usfca.edu/okamoto/pdf/Cisco%20Phone%20Instructions.pdf">
+					  		  Click Here</a> for a pdf file with instructions for phone and voicemail use.</li>
+					  	<li>Voicemails from the downtown campus cannot be forwarded to main
+					  	 	  campus extensions due to differing systems.</li>
+					  	<li>If you here a dialtone in the middle of dialing a number just ignore it
+					  		  and keep dialing</li>
+					  <li>To request international calling please contact the ITS Help Desk x6668</li>
+				  </ul>
+
 				<h4 id="conference_phone">Conference Phone</h4>
 					<p>A conference phone is kept at the main desk and can be setup in
 						 any of the rooms or offices at the downtown campus.</p>
