--- a/index.html
+++ b/index.html
@@ -380,6 +380,7 @@
 
 <!-- </div> <!-- row -->
 </div> <!-- container -->
+<div id="stats"></div>
 
   <script src="js/vendor/jquery-1.11.1.js"></script>
   <!-- <script src="http://code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.js"></script> -->
